--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
 
   <link rel="profile" href="http://gmpg.org/xfn/11">
   <link rel="pingback" href="">
-  <script src="https://use.fontawesome.com/18a9c36ed1.js"></script>
 
   <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
     integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700">
@@ -31,7 +32,7 @@
   <header>
     <nav>
       <div class="header">
-        <a href="" class="logo">CSS Nav</a>
+        <a href="" class="logo"><img src="./assets/img/cr-etanche0/cr-etanche0@0,075x.png" alt=""></a>
         <input class="menu-btn" type="checkbox" id="menu-btn" />
         <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
         <ul class="menu">
@@ -47,8 +48,12 @@
 
   <main>
     <section class="first-banner">
-      <div>
-        <h3>Lorem ipsum</h3>
+      <div class="first-banner-content">
+        <div><img src="./assets/img/cr-etanche00/Calque 1@0,25x.png" alt=""></div><br><br><br>
+        <div><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          </h2></div>
+        <div><h4>Lorem ipsum</h4></div>
+
       </div>
     </section>
     <section class="second-banner">
