--- a/index.html
+++ b/index.html
@@ -32,46 +32,67 @@
   <header>
     <nav>
       <div class="header">
-        <a href="" class="logo"><img src="./assets/img/cr-etanche0/cr-etanche0@0,075x.png" alt=""></a>
-        <input class="menu-btn" type="checkbox" id="menu-btn" />
-        <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
-        <ul class="menu">
-          <li><a href="#work">Our Work</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#careers">Careers</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
+        <div class="header-background">
+          <a href="" class="logo"><img src="./assets/img/cr-etanche0/cr-etanche0@0,075x.png" alt=""></a>
+          <input class="menu-btn" type="checkbox" id="menu-btn" />
+          <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
+          <ul class="menu">
+            <li><a href="#work">GALERIE</a></li>
+            <li><a href="#about">LA SOCIÉTÉ</a></li>
+            <li><a href="#contact">CONTACT</a></li>
+          </ul>
+        </div>
+
       </div>
     </nav>
-
   </header>
 
   <main>
     <section class="first-banner">
       <div class="first-banner-content">
-        <div><img src="./assets/img/cr-etanche00/Calque 1@0,25x.png" alt=""></div><br><br><br>
-        <div><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-          </h2></div>
+        <div class="fb-content-logo">
+          <img src="./assets/img/rd-logo/rd-logo@0,25x.png" alt="">
+          <div>
+            <h2>Étanchéité</h2>
+            <h2>Isolation</h2>
+          </div>
+        </div>
+        <br><br><br>
+        <div><h1>CR-ETANCHE</h1></div>
+        <div><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2></div>
         <div><h4>Lorem ipsum</h4></div>
 
       </div>
     </section>
+
     <section class="second-banner">
+      <div class="second-banner-content">
+        <div class="col-sm-8">
+          <h3>Lorem ipsum</h3>
+          <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
+            Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
+            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.</p>
+        </div>
+        <div class="col-sm-4">
+          <img src="./assets/img/img3.png" alt="">
+        </div>
+        <div></div>
+      </div>
     </section>
     <section class="banner one-up">
       <div class="container min-galery">
-        <div class="row row-eq-height">
-            <div class="col-md-4 text-center">
+        <div class="">
+            <div class="col-lg-4 bloc-img-section">
               <img src="./assets/img/img1.png" alt="image1">
-              <h4 class="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
+              <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
-            <div class="col-md-4  text-center">
+            <div class="col-lg-4  bloc-img-section">
               <img src="./assets/img/img2.png" alt="image2">
-              <h4 class="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
+              <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
-            <div class="col-md-4 text-center">
+            <div class="col-lg-4 bloc-img-section">
               <img src="./assets/img/img3.png" alt="image3">
-              <h4 class="3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
+              <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
         </div>
       </div>
@@ -112,19 +133,19 @@
         <div class="formBox">
           <div class="inputBox w50">
             <input type="text" required>
-            <span>Nom et prénom *</span>
+            <span>Nom et prénom</span>
           </div>
           <div class="inputBox w40">
             <input type="text" required>
-            <span>Téléphone *</span>
+            <span>Téléphone</span>
           </div>
           <div class="inputBox w100">
             <input type="text" required>
-            <span>Adresse mail *</span>
+            <span>Adresse mail</span>
           </div>
           <div class="inputBox w100">
             <textarea required></textarea>
-            <span>Informations supplémentaires *</span>
+            <span>Informations supplémentaires</span>
           </div>
           <div class="inputBox w100">
             <input type="submit" value="Envoyer">
