--- a/index.html
+++ b/index.html
@@ -23,9 +23,6 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
   <link rel="stylesheet" href="./assets/css/style.css">
-  <script src="https://code.jquery.com/jquery-3.6.0.slim.min.js" integrity="sha256-u7e5khyithlIdTpu22PHhENmPcRdFiHRjhAuHcs05RI=" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-  <script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
 </head>
 
 <body>
@@ -33,13 +30,13 @@
     <nav>
       <div class="header">
         <div class="header-background">
-          <a href="" class="logo"><img src="./assets/img/cr-etanche0/cr-etanche0@0,075x.png" alt=""></a>
+          <a href="" class="logo"><img src="./assets/img/cr-etanche0/cr-etanche0@0,075x.png" alt="cr-etanche" width="100%"></a>
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
           <ul class="menu">
-            <li><a href="#work">GALERIE</a></li>
-            <li><a href="#about">LA SOCIÉTÉ</a></li>
-            <li><a href="#contact">CONTACT</a></li>
+            <li><a href="#about" onclick="scrollToElement('#about', 700)">LA SOCIÉTÉ</a></li>
+            <li><a href="#galery" onclick="scrollToElement('#galery', 700)">GALERIE</a></li>
+            <li><a href="#section-footer" onclick="scrollToElement('#section-footer', 700)">CONTACT</a></li>
           </ul>
         </div>
 
@@ -48,60 +45,80 @@
   </header>
 
   <main>
-    <section class="first-banner">
+    <section class="first-banner" style="background-image: url('/assets/img/wall99_192.jpg')">
       <div class="first-banner-content">
         <div class="fb-content-logo">
-          <img src="./assets/img/rd-logo/rd-logo@0,25x.png" alt="">
+          <img id="logo-img" src="./assets/img/rd-logo/rd-logo@0,25x.png" alt="">
           <div>
-            <h2>Étanchéité</h2>
-            <h2>Isolation</h2>
+            <h2>-&nbsp;Étanchéité</h2>
+            <h2>-&nbsp;Isolation</h2>
           </div>
         </div>
-        <br><br><br>
-        <div><h1>CR-ETANCHE</h1></div>
-        <div><h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h2></div>
-        <div><h4>Lorem ipsum</h4></div>
+        <br><br><br><br>
+        <div class="fb-content-text">
+          <div><h1>CR-ETANCHE</h1></div>
+          <div><h2>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</h2></div>
+          <div><h4>Lorem ipsum</h4></div>
+          <!-- <span class="buttonAbout">En savoir plus</span> -->
+          <div class="buttonAbout">
+            <a href="#section-footer" onclick="scrollToElement('#section-footer', 1100)"><span>En savoir plus</span></a>
+          </div>
+        </div>
 
       </div>
     </section>
-
-    <section class="second-banner">
+    <section class="second-banner" id="about">
       <div class="second-banner-content">
         <div class="col-sm-8">
           <h3>Lorem ipsum</h3>
           <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
             Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
-            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.</p>
-        </div>
-        <div class="col-sm-4">
-          <img src="./assets/img/img3.png" alt="">
+            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
+            Nulla vel hendrerit tortor. Maecenas justo eros, commodo maximus porta at, dignissim at arcu.
+            Morbi faucibus elit ligula, quis mollis velit molestie nec. Phasellus ut libero ut urna lobortis dapibus condimentum ut ligula.
+          </p>
+          <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
+            Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
+            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
+            Nulla vel hendrerit tortor. Maecenas justo eros, commodo maximus porta at, dignissim at arcu.
+            Morbi faucibus elit ligula, quis mollis velit molestie nec. Phasellus ut libero ut urna lobortis dapibus condimentum ut ligula.
+          </p>
+          </div>
+        <div class="col-sm-4 imgslide"  style="max-width:300px">
+          <img class="imgslides" src="./assets/img/img1.png" alt="image2" style="width:100%">
+          <img class="imgslides" src="./assets/img/img2.png" alt="image2" style="width:100%">
+          <img class="imgslides" src="./assets/img/img3.png" alt="image2" style="width:100%">
         </div>
         <div></div>
       </div>
     </section>
+    <section class="banner two-up" id="galery"></section>
     <section class="banner one-up">
       <div class="container min-galery">
-        <div class="">
+        <div class="galery-content">
             <div class="col-lg-4 bloc-img-section">
-              <img src="./assets/img/img1.png" alt="image1">
+              <img class="round-effect effecthover" src="./assets/img/img1.png" alt="image1">
               <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
             <div class="col-lg-4  bloc-img-section">
-              <img src="./assets/img/img2.png" alt="image2">
+              <img class="round-effect effecthover" src="./assets/img/img2.png" alt="image2">
               <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
             <div class="col-lg-4 bloc-img-section">
-              <img src="./assets/img/img3.png" alt="image3">
+              <img class="round-effect effecthover" src="./assets/img/img3.png" alt="image3">
               <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
         </div>
       </div>
     </section>
-    <section class="second-banner">
+    <section class="third-banner">
+      <div id="map"><h2>Où nous-trouver ?</h2></div><br>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1295.7642538029604!2d5.975262927369356!3d49.49341274163587!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479534e0f76d7e77%3A0xcb3a8a5fddd8b0e9!2s59%20Rue%20du%20Brill%2C%204042%20Esch-sur-Alzette%2C%20Luxembourg!5e0!3m2!1sfr!2sfr!4v1616016705634!5m2!1sfr!2sfr"
+       width="100%" height="400px" style="border:0;" allowfullscreen="1" loading="lazy"></iframe>
+      </script>
     </section>
     <section class="banner two-up"></section>
   </main>
-
 </body>
 <footer>
   <section id="section-footer">
@@ -112,18 +129,18 @@
           <ul class="info">
             <li>
               <span><img src="./assets/img/gps.svg" alt=""></span>
-              <span> Accentsoft
-                <br> 1 Rue Washington
-                <br> Luxembourg 57000 <br>
+              <span>CR-ETANCHE
+                <br>59 Rue du Brill
+                <br>L-4041 Esch-sur-Alzette <br>
               </span>
             </li>
             <li>
             <span><img src="./assets/img/mail.svg" alt=""></span>
-            <span>lorem ipsum@gmail.com</span>
+            <span>cr.etanche@hotmail.com</span>
             </li>
             <li>
             <span><img src="./assets/img/call.svg" alt=""></span>
-            <span>+33 01 20 30 45</span>
+            <span>(+352) 6 21 76 72 61</span>
             </li>
           </ul>
         </div>
@@ -133,7 +150,7 @@
         <div class="formBox">
           <div class="inputBox w50">
             <input type="text" required>
-            <span>Nom et prénom</span>
+            <span>Nom Prénom</span>
           </div>
           <div class="inputBox w40">
             <input type="text" required>
@@ -154,6 +171,31 @@
       </div>
     </div>
   </section>
-
 </footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  var scrollToElement = function(el, ms){
+    var speed = (ms) ? ms : 600;
+    $('html,body').animate({
+        scrollTop: $(el).offset().top
+    }, speed);
+}
+</script>
+<script>
+  var myIndex = 0;
+  carousel();
+  function carousel() {
+    var i;
+    var x = document.getElementsByClassName("imgslides");
+    for (i = 0; i < x.length; i++) {
+      x[i].style.display = "none";
+    }
+    myIndex++;
+    if (myIndex > x.length) {myIndex = 1}
+    x[myIndex-1].style.display = "block";
+    setTimeout(carousel, 4000); // Change image every 2 seconds
+  }
+  </script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+<script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
 </html>
