--- a/index.html
+++ b/index.html
@@ -4,33 +4,69 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="X-UA-Compatible" content="chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>cr-etanche</title>
+  <meta name="robots" content="index, follow">
+  <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
+  <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
-  <link rel="profile" href="http://gmpg.org/xfn/11">
-  <link rel="pingback" href="">
+  <meta name="keywords" content="Étanchéité isolation Luxembourg et Moselle"/>
+  <meta name="description" content="150 words"/>
+  <meta name="subject" content="Étanchéité et isolation">
+  <meta name="copyright"content="cr etanche">
+  <meta name="language" content="FR">
+  <meta name="revised" content="Thursday, March 18th, 2021, 2:15 pm" />
+  <meta name="abstract" content="">
+  <meta name="url" content="https://cr-etanche.com">
+  <meta name="identifier-URL" content="https://cr-etanche.com">
+  <meta http-equiv="Cache-Control" content="no-cache">
+  <meta name="og:title" content="CR-Etanche"/>
+  <meta name="og:type" content="Entreprise"/>
+  <meta name="og:url" content="https://cr-etanche.com"/>
+  <!-- <meta name="og:image" content=""/> -->
+  <meta name="og:site_name" content="CR-Etanche"/>
+  <meta name="og:description" content="Étanchéité isolation Luxembourg et Moselle"/>
+  <meta name="og:locality" content="France"/>
+  <meta name="og:region" content="Moselle, Luxembourg"/>
+  <meta name="og:postal-code" content="L-4041, 57000"/>
 
-  <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css'
-    integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta content="yes" name="apple-touch-fullscreen" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="viewport" content="width = 320, initial-scale = 2.3, user-scalable = no">
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
-
-  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="shortcut icon" href="./assets/img/rd-logo/rd-logo@0,1x.webp" />
+  <link rel="shortcut icon" type="image/ico" href="./assets/img/rd-logo/rd-logo@0,1x.webp" />
+  <link rel="canonical" href="https://cr-etanche.com" />
+  <link rel="shortcut icon" href="https://devisgratuit.grosfillex.com/themes/seq_bootstrap/favicon.ico" type="image/vnd.microsoft.icon">
   <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;1,100;1,300;1,400&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:700">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Dancing+Script">
   <link rel="stylesheet" href="./assets/css/style.css">
+
+  <meta name="title" content="Envie de changer de porte d&#39;entrée ? | Grosfillex">
+  <meta name="MobileOptimized" content="width">
+  <meta name="HandheldFriendly" content="true">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <link rel="alternate" hreflang="fr" href="https://devisgratuit.grosfillex.com/portes-entree">
+  <link rel="canonical" href="https://devisgratuit.grosfillex.com/portes-entree">
+  <link rel="shortlink" href="https://devisgratuit.grosfillex.com/node/50">
+  <link rel="revision" href="https://devisgratuit.grosfillex.com/portes-entree">
 </head>
+
+
 
 <body>
   <header>
+
     <nav>
       <div class="header">
         <div class="header-background">
-          <a href="" class="logo"><img src="./assets/img/cr-etanche0/cr-etanche0@0,075x.png" alt="cr-etanche" width="100%"></a>
+          <a href="index.html" class="logo-text"><p>cr-etanche</p></a>
           <input class="menu-btn" type="checkbox" id="menu-btn" />
           <label class="menu-icon" for="menu-btn"><span class="navicon"></span></label>
           <ul class="menu">
@@ -39,16 +75,16 @@
             <li><a href="#section-footer" onclick="scrollToElement('#section-footer', 700)">CONTACT</a></li>
           </ul>
         </div>
-
       </div>
     </nav>
+
   </header>
 
   <main>
-    <section class="first-banner" style="background-image: url('/assets/img/wall99_192.jpg')">
+    <section class="first-banner" style="background-image: url('./assets/img/wall99_192.webp'), url(./assets/img/wall99_192.jpg)">
       <div class="first-banner-content">
         <div class="fb-content-logo">
-          <img id="logo-img" src="./assets/img/rd-logo/rd-logo@0,25x.png" alt="">
+          <!-- <img id="logo-img" src="./assets/img/rd-logo/rd-logo@0,25x.png" alt=""> -->
           <div>
             <h2>-&nbsp;Étanchéité</h2>
             <h2>-&nbsp;Isolation</h2>
@@ -59,9 +95,8 @@
           <div><h1>CR-ETANCHE</h1></div>
           <div><h2>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</h2></div>
           <div><h4>Lorem ipsum</h4></div>
-          <!-- <span class="buttonAbout">En savoir plus</span> -->
           <div class="buttonAbout">
-            <a href="#section-footer" onclick="scrollToElement('#section-footer', 1100)"><span>En savoir plus</span></a>
+            <a href="#section-footer" onclick="scrollToElement('#section-footer', 1100)"><span>Deamnder un devis</span></a>
           </div>
         </div>
 
@@ -69,25 +104,42 @@
     </section>
     <section class="second-banner" id="about">
       <div class="second-banner-content">
-        <div class="col-sm-8">
-          <h3>Lorem ipsum</h3>
-          <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
-            Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
-            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
-            Nulla vel hendrerit tortor. Maecenas justo eros, commodo maximus porta at, dignissim at arcu.
-            Morbi faucibus elit ligula, quis mollis velit molestie nec. Phasellus ut libero ut urna lobortis dapibus condimentum ut ligula.
-          </p>
-          <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
-            Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
-            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
-            Nulla vel hendrerit tortor. Maecenas justo eros, commodo maximus porta at, dignissim at arcu.
-            Morbi faucibus elit ligula, quis mollis velit molestie nec. Phasellus ut libero ut urna lobortis dapibus condimentum ut ligula.
-          </p>
-          </div>
-        <div class="col-sm-4 imgslide"  style="max-width:300px">
-          <img class="imgslides" src="./assets/img/img1.png" alt="image2" style="width:100%">
-          <img class="imgslides" src="./assets/img/img2.png" alt="image2" style="width:100%">
-          <img class="imgslides" src="./assets/img/img3.png" alt="image2" style="width:100%">
+        <h3>Lorem ipsum</h3>
+        <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
+          Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
+          In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
+        </p>
+        <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
+          Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
+          In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
+          Nulla vel hendrerit tortor. Maecenas justo eros, commodo maximus porta at, dignissim at arcu.
+          Morbi faucibus elit ligula, quis mollis velit molestie nec. Phasellus ut libero ut urna lobortis dapibus condimentum ut ligula.
+        </p>
+      </div>
+      <div class="col-sm-4 bloc-imgslide"  style="max-width:300px">
+        <div class="content-imgslide">
+          <picture>
+            <source srcset="./assets/img/img1.webp" type="image/webp">
+            <source srcset="./assets/img/img1.jpg" type="image/jpg">
+            <img class="imgslides" src="./assets/img/img1.webp" alt="image1">
+          </picture>
+          <picture>
+            <source srcset="./assets/img/img2.webp" type="image/webp">
+            <source srcset="./assets/img/img2.jpg" type="image/jpg">
+            <img class="imgslides" src="./assets/img/img2.webp" alt="image2">
+          </picture>
+          <picture>
+            <source srcset="./assets/img/img3.webp" type="image/webp">
+            <source srcset="./assets/img/img3.jpg" type="image/jpg">
+            <img class="imgslides" src="./assets/img/img3.webp" alt="image3">
+          </picture>
+        </div>
+
+
+
+          <!-- <img class="imgslides" src="./assets/img/img1.jpg" alt="image1" style="width:100%">
+          <img class="imgslides" src="./assets/img/img2.jpg" alt="image2" style="width:100%">
+          <img class="imgslides" src="./assets/img/img3.jpg" alt="image3" style="width:100%"> -->
         </div>
         <div></div>
       </div>
@@ -97,15 +149,29 @@
       <div class="container min-galery">
         <div class="galery-content">
             <div class="col-lg-4 bloc-img-section">
-              <img class="round-effect effecthover" src="./assets/img/img1.png" alt="image1">
+              <picture>
+                <source srcset="./assets/img/img1.webp" type="image/webp">
+                <source srcset="./assets/img/img1.jpg" type="image/jpg">
+                <img class="round-effect effecthover" src="./assets/img/img1.jpg" alt="image1">
+              </picture>
               <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
             <div class="col-lg-4  bloc-img-section">
-              <img class="round-effect effecthover" src="./assets/img/img2.png" alt="image2">
+              <picture>
+                <source srcset="./assets/img/img2.webp" type="image/webp">
+                <source srcset="./assets/img/img2.jpg" type="image/jpg">
+                <img class="round-effect effecthover" src="./assets/img/img2.jpg" alt="image2">
+              </picture>
+              <!-- <img class="round-effect effecthover" src="./assets/img/img2.jpf" alt="image2"> -->
               <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
             <div class="col-lg-4 bloc-img-section">
-              <img class="round-effect effecthover" src="./assets/img/img3.png" alt="image3">
+              <picture>
+                <source srcset="./assets/img/img3.webp" type="image/webp">
+                <source srcset="./assets/img/img3.jpg" type="image/jpg">
+                <img class="round-effect effecthover" src="./assets/img/img3.jpg" alt="image3">
+              </picture>
+              <!-- <img class="round-effect effecthover" src="./assets/img/img3.jpf" alt="image3">  -->
               <h4 class="text-3">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut euismod tempus massa, eu laoreet erat fringilla id. Fusce ut ultricies erat, in porttitor leo.</h4>
             </div>
         </div>
@@ -128,18 +194,24 @@
           <h2>Contact Info</h2>
           <ul class="info">
             <li>
-              <span><img src="./assets/img/gps.svg" alt=""></span>
+              <span><svg class="svg-icon" viewBox="0 0 20 20">
+                <path d="M17.388,4.751H2.613c-0.213,0-0.389,0.175-0.389,0.389v9.72c0,0.216,0.175,0.389,0.389,0.389h14.775c0.214,0,0.389-0.173,0.389-0.389v-9.72C17.776,4.926,17.602,4.751,17.388,4.751 M16.448,5.53L10,11.984L3.552,5.53H16.448zM3.002,6.081l3.921,3.925l-3.921,3.925V6.081z M3.56,14.471l3.914-3.916l2.253,2.253c0.153,0.153,0.395,0.153,0.548,0l2.253-2.253l3.913,3.916H3.56z M16.999,13.931l-3.921-3.925l3.921-3.925V13.931z"></path>
+              </svg></span>
               <span>CR-ETANCHE
                 <br>59 Rue du Brill
                 <br>L-4041 Esch-sur-Alzette <br>
               </span>
             </li>
             <li>
-            <span><img src="./assets/img/mail.svg" alt=""></span>
+            <span><svg class="svg-icon" viewBox="0 0 20 20">
+							<path d="M17.388,4.751H2.613c-0.213,0-0.389,0.175-0.389,0.389v9.72c0,0.216,0.175,0.389,0.389,0.389h14.775c0.214,0,0.389-0.173,0.389-0.389v-9.72C17.776,4.926,17.602,4.751,17.388,4.751 M16.448,5.53L10,11.984L3.552,5.53H16.448zM3.002,6.081l3.921,3.925l-3.921,3.925V6.081z M3.56,14.471l3.914-3.916l2.253,2.253c0.153,0.153,0.395,0.153,0.548,0l2.253-2.253l3.913,3.916H3.56z M16.999,13.931l-3.921-3.925l3.921-3.925V13.931z"></path>
+						</svg></span>
             <span>cr.etanche@hotmail.com</span>
             </li>
             <li>
-            <span><img src="./assets/img/call.svg" alt=""></span>
+            <span><svg class="svg-icon" viewBox="0 0 20 20">
+							<path d="M17.388,4.751H2.613c-0.213,0-0.389,0.175-0.389,0.389v9.72c0,0.216,0.175,0.389,0.389,0.389h14.775c0.214,0,0.389-0.173,0.389-0.389v-9.72C17.776,4.926,17.602,4.751,17.388,4.751 M16.448,5.53L10,11.984L3.552,5.53H16.448zM3.002,6.081l3.921,3.925l-3.921,3.925V6.081z M3.56,14.471l3.914-3.916l2.253,2.253c0.153,0.153,0.395,0.153,0.548,0l2.253-2.253l3.913,3.916H3.56z M16.999,13.931l-3.921-3.925l3.921-3.925V13.931z"></path>
+						</svg></span>
             <span>(+352) 6 21 76 72 61</span>
             </li>
           </ul>
@@ -149,23 +221,23 @@
         <h2>SEND A MESSAGE</h2>
         <div class="formBox">
           <div class="inputBox w50">
-            <input type="text" required>
+            <input type="text" required aria-labelledby="name">
             <span>Nom Prénom</span>
           </div>
           <div class="inputBox w40">
-            <input type="text" required>
+            <input type="text" required aria-labelledby="phone">
             <span>Téléphone</span>
           </div>
           <div class="inputBox w100">
-            <input type="text" required>
+            <input type="text" required aria-labelledby="mail">
             <span>Adresse mail</span>
           </div>
           <div class="inputBox w100">
-            <textarea required></textarea>
+            <textarea required aria-labelledby="more informations"></textarea>
             <span>Informations supplémentaires</span>
           </div>
           <div class="inputBox w100">
-            <input type="submit" value="Envoyer">
+            <input type="submit" value="Envoyer" aria-labelledby="send">
           </div>
         </div>
       </div>
@@ -196,6 +268,4 @@
     setTimeout(carousel, 4000); // Change image every 2 seconds
   }
   </script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-<script src="https://cdn.boomcdn.com/libs/wow-js/1.3.0/wow.min.js"></script>
 </html>
