modification css / html / icon+ / SEO

--- a/index.html
+++ b/index.html
@@ -35,7 +35,6 @@
   <meta content="yes" name="apple-touch-fullscreen" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="format-detection" content="telephone=no">
-  <meta name="viewport" content="width = 320, initial-scale = 2.3, user-scalable = no">
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
@@ -50,9 +49,7 @@
   <meta name="title" content="Envie de changer de porte d&#39;entrée ? | Grosfillex">
   <meta name="MobileOptimized" content="width">
   <meta name="HandheldFriendly" content="true">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <link rel="alternate" hreflang="fr" href="https://devisgratuit.grosfillex.com/portes-entree">
   <link rel="canonical" href="https://devisgratuit.grosfillex.com/portes-entree">
   <link rel="shortlink" href="https://devisgratuit.grosfillex.com/node/50">
   <link rel="revision" href="https://devisgratuit.grosfillex.com/portes-entree">
@@ -94,7 +91,7 @@
         <div class="fb-content-text">
           <div><h1>CR-ETANCHE</h1></div>
           <div><h2>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</h2></div>
-          <div><h4>Lorem ipsum</h4></div>
+          <div><p>Lorem ipsum</p></div>
           <div class="buttonAbout">
             <a href="#section-footer" onclick="scrollToElement('#section-footer', 1100)"><span>Deamnder un devis</span></a>
           </div>
@@ -221,19 +218,19 @@
         <h2>SEND A MESSAGE</h2>
         <div class="formBox">
           <div class="inputBox w50">
-            <input type="text" required aria-labelledby="name">
+            <input type="text" aria-labelledby="name" aria-required="true">
             <span>Nom Prénom</span>
           </div>
           <div class="inputBox w40">
-            <input type="text" required aria-labelledby="phone">
+            <input type="text" aria-labelledby="phone" aria-required="true">
             <span>Téléphone</span>
           </div>
           <div class="inputBox w100">
-            <input type="text" required aria-labelledby="mail">
+            <input type="text" aria-labelledby="mail" aria-required="true">
             <span>Adresse mail</span>
           </div>
           <div class="inputBox w100">
-            <textarea required aria-labelledby="more informations"></textarea>
+            <textarea aria-labelledby="more informations" aria-required="true"></textarea>
             <span>Informations supplémentaires</span>
           </div>
           <div class="inputBox w100">
