--- a/cr-etanche.html
+++ b/cr-etanche.html
@@ -18,12 +18,12 @@
   <meta name="language" content="FR">
   <meta name="revised" content="Thursday, March 18th, 2021, 2:15 pm" />
   <meta name="abstract" content="">
-  <meta name="url" content="https://cr-etanche.com">
-  <meta name="identifier-URL" content="https://cr-etanche.com">
   <meta http-equiv="Cache-Control" content="no-cache">
   <meta name="og:title" content="CR-Etanche"/>
   <meta name="og:type" content="Entreprise"/>
-  <meta name="og:url" content="https://cr-etanche.com"/>
+  <!-- <meta name="url" content="https://cr-etanche.com">
+  <meta name="identifier-URL" content="https://cr-etanche.com"> -->
+  <!-- <meta name="og:url" content="https://cr-etanche.com"/> -->
   <!-- <meta name="og:image" content=""/> -->
   <meta name="og:site_name" content="CR-Etanche"/>
   <meta name="og:description" content="Étanchéité isolation Luxembourg et Moselle"/>
@@ -34,13 +34,13 @@
   <meta name="HandheldFriendly" content="true">
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-touch-fullscreen" content="yes" />
+  <!-- <link rel="canonical" href="https://cr-etanche.com" /> -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Audiowide&display=swap" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="shortcut icon" href="./assets/img/rd-logo/rd-logo@0,1x.webp" />
   <link rel="shortcut icon" type="image/ico" href="./assets/img/rd-logo/rd-logo@0,1x.webp" />
-  <link rel="canonical" href="https://cr-etanche.com" />
   <link rel="alternate" hreflang="fr" href="">
   <link rel="shortlink" href="">
   <link rel="revision" href="">
