modification head tag

--- a/cr-etanche.html
+++ b/cr-etanche.html
@@ -10,7 +10,6 @@
   <meta name="robots" content="index, follow">
   <meta name="googlebot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
   <meta name="bingbot" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
-
   <meta name="keywords" content="Étanchéité isolation Luxembourg et Moselle"/>
   <meta name="description" content="150 words"/>
   <meta name="subject" content="Étanchéité et isolation">
@@ -41,10 +40,9 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <link rel="shortcut icon" href="./assets/img/rd-logo/rd-logo@0,1x.webp" />
   <link rel="shortcut icon" type="image/ico" href="./assets/img/rd-logo/rd-logo@0,1x.webp" />
-  <link rel="alternate" hreflang="fr" href="">
+  <!-- <link rel="alternate" hreflang="fr" href="">
   <link rel="shortlink" href="">
-  <link rel="revision" href="">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="revision" href=""> -->
   <link rel="stylesheet" href="./assets/css/styles.css">
 
 </head>
@@ -64,7 +62,7 @@
         </label>
       </div>
       <div class="nav-links">
-        <a href="./cr-etanche.html">Accueil</a>
+        <a href="#">Accueil</a>
         <a href="#about" onclick="scrollToElement('#about', 700)">Société</a>
         <a href="#galery" onclick="scrollToElement('#galery', 700)">Galerie</a>
         <a href="#section-footer" onclick="scrollToElement('#section-footer', 700)">Contact</a>
