--- a/cr-etanche.html
+++ b/cr-etanche.html
@@ -43,7 +43,7 @@
   <!-- <link rel="alternate" hreflang="fr" href="">
   <link rel="shortlink" href="">
   <link rel="revision" href=""> -->
-  <link rel="stylesheet" href="./assets/css/styles.css">
+  <link rel="stylesheet" href="/assets/css/styles.css">
 
 </head>
 
