--- a/index.html
+++ b/index.html
@@ -86,14 +86,20 @@
     </nav> -->
   </header>
   <section class="first-banner">
-    <div class="container" data-aos="fade-down" data-aos-duration="2000">
-      <div>
+    <div class="container">
+      <div data-aos="fade-up" data-aos-duration="1000" data-aos-offset="150" data-aos-delay="400">
         <h2>-&nbsp;Étanchéité</h2>
         <h2>-&nbsp;Isolation</h2>
-      </div>
-      <div><h1>CR-ETANCHE</h1></div>
-      <div><h2>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</h2></div>
-      <div><p>Lorem ipsum</p></div>
+      </div><br><br><br>
+      <div data-aos="fade-up" data-aos-duration="1000" data-aos-offset="150" data-aos-delay="600">
+        <h1>CR-ETANCHE</h1>
+      </div><br>
+      <div data-aos="fade-up" data-aos-duration="1000" data-aos-offset="150" data-aos-delay="800">
+        <h2>Lorem ipsum dolor sit amet, <br> consectetur adipiscing elit.</h2>
+      </div><br>
+      <div data-aos="fade-up" data-aos-duration="1000" data-aos-offset="150" data-aos-delay="1000"
+      ><p>Lorem ipsum</p>
+    </div>
       <div class="container">
         <a href="#section-footer" onclick="scrollToElement('#section-footer', 1100)"></a>
       </div>
@@ -138,7 +144,7 @@
             </picture> -->
           </div>
         </div>
-        <div class="bannerIcon">
+        <div class="bannerIcon" data-aos-offset="300" data-aos-delay="500">
           <div>
             <svg id="icon-water" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 327.44 327.44"><path d="M167.48,100.82c-58.57,63.89-56.58,105.37-35.63,124.83,9.36,8.69,22.49,13,35.64,13s26.28-4.34,35.64-13c20.94-19.45,22.93-60.94-35.65-124.83Zm0,142.48c-14.26,0-28.55-4.76-38.79-14.27-22.81-21.19-25.59-65.72,37.09-133.2h0a2.33,2.33,0,0,1,3.28-.12l.23.25c62.56,67.42,59.78,111.91,37,133.09C196,238.54,181.75,243.3,167.49,243.3Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:5px"/><path d="M134.82,181.55a2.48,2.48,0,1,1,4.81,1.22c0,.07-5.84,22.14,6.84,34a2.48,2.48,0,1,1-3.38,3.62C128.23,206.5,134.8,181.62,134.82,181.55Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:5px"/><circle cx="163.72" cy="163.72" r="159.22" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:9px"/></svg>
             <p>Étanchéité</p>
