--- a/index.html
+++ b/index.html
@@ -95,65 +95,42 @@
 
   <section class="two-up"id="about"></section><br>
   <section class="second-banner">
-    <div data-aos="fade-down" data-aos-duration="2000">
+    <div data-aos="fade-down" data-aos-duration="1500" data-aos-offset="200">
       <div class="about-title">
-
         <h3>Lorem ipsum</h3>
       </div>
       <div class="content-banner">
-          <div class="about-text">
-            <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
-              Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
-              In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
-              Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
-              <br><br>
-              Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
-              In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
-              Nulla vel hendrerit tortor. Maecenas justo eros, commodo maximus porta at, dignissim at arcu.
-              Morbi faucibus elit ligula, quis mollis velit molestie nec. Phasellus ut libero ut urna lobortis dapibus condimentum ut ligula.
-            </p>
-          </div>
-          <div class="content-imgslide">
-            <!-- <picture>
-              <source srcset="./assets/img/img1.webp" type="image/webp">
-              <source srcset="./assets/img/img1.jpg" type="image/jpg">
-              <img class="imgslides" src="./assets/img/img1.webp" alt="image1">
-            </picture>
-            <picture>
-              <source srcset="./assets/img/img2.webp" type="image/webp">
-              <source srcset="./assets/img/img2.jpg" type="image/jpg">
-              <img class="imgslides" src="./assets/img/img2.webp" alt="image2">
-            </picture>
-            <picture>
-              <source srcset="./assets/img/img3.webp" type="image/webp">
-              <source srcset="./assets/img/img3.jpg" type="image/jpg">
-              <img class="imgslides" src="./assets/img/img3.webp" alt="image3">
-            </picture> -->
-          </div>
+        <div class="about-text">
+          <p>Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
+            Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
+            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
+            Proin congue justo vehicula eleifend vestibulum. Nunc justo mi, porta nec nunc ultricies, vestibulum dignissim augue.
+            <br><br>
+            Phasellus ante lacus, porttitor dignissim velit non, viverra placerat est. Praesent consectetur tincidunt nunc a iaculis.
+            In ultrices vestibulum condimentum. Duis blandit tempor nulla, pellentesque elementum sem tincidunt dictum.Mauris sed est aliquet, gravida quam non, placerat velit. Etiam at euismod velit.
+            Nulla vel hendrerit tortor. Maecenas justo eros, commodo maximus porta at, dignissim at arcu.
+            Morbi faucibus elit ligula, quis mollis velit molestie nec. Phasellus ut libero ut urna lobortis dapibus condimentum ut ligula.
+          </p>
         </div>
-        <div class="bannerIcon" data-aos-offset="300" data-aos-delay="500">
-          <div>
-            <svg id="icon-water" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 327.44 327.44"><path d="M167.48,100.82c-58.57,63.89-56.58,105.37-35.63,124.83,9.36,8.69,22.49,13,35.64,13s26.28-4.34,35.64-13c20.94-19.45,22.93-60.94-35.65-124.83Zm0,142.48c-14.26,0-28.55-4.76-38.79-14.27-22.81-21.19-25.59-65.72,37.09-133.2h0a2.33,2.33,0,0,1,3.28-.12l.23.25c62.56,67.42,59.78,111.91,37,133.09C196,238.54,181.75,243.3,167.49,243.3Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:5px"/><path d="M134.82,181.55a2.48,2.48,0,1,1,4.81,1.22c0,.07-5.84,22.14,6.84,34a2.48,2.48,0,1,1-3.38,3.62C128.23,206.5,134.8,181.62,134.82,181.55Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:5px"/><circle cx="163.72" cy="163.72" r="159.22" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:9px"/></svg>
-            <p>Étanchéité</p>
-          </div>
-          <div>
-            <svg id="icon-insul" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 327.44 327.44"><g id="icon-water"><circle cx="163.72" cy="163.72" r="159.22" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:9px"/></g><g id="icon-insul"><path d="M176.37,165.24c1.07-1.18,1.58-1.76,2.11-2.33,13.52-14.39,13.42-35.89-.22-49.38-13.82-13.66-35.44-13.68-49.65.07q-27.21,26.34-54.25,52.85a36.78,36.78,0,0,0-7,9.23c-12.6,24.78,2.33,60.21,36.26,60.78,31.88.53,63.77.12,95.65,0a7,7,0,0,0,4.33-2q33-32.49,65.74-65.15c.67-.67,1.22-1.45,2.14-2.55Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-linejoin:round;stroke-width:8px"/><path d="M176.37,165.24l95.14,1.49c-.92,1.1-1.47,1.88-2.14,2.55q-32.84,32.61-65.74,65.15a7,7,0,0,1-4.33,2c-31.88.13-63.77.54-95.65,0-33.93-.57-48.86-36-36.26-60.78a36.78,36.78,0,0,1,7-9.23q27-26.56,54.25-52.85c14.21-13.75,35.83-13.73,49.65-.07,13.64,13.49,13.74,35,.22,49.38C178,163.48,177.44,164.06,176.37,165.24Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px"/><path d="M63,192.36c.72-19.76,16.32-34.73,35.75-34.44,19.19.28,34.15,15.71,34.37,35.45,0,.78,0,1.55.09,3.15" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px"/></g></svg>
-            <p>Isolation</p>
-          </div>
+      </div>
+      <div class="bannerIcon" data-aos-offset="300" data-aos-delay="500">
+        <div>
+          <svg id="icon-water" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 327.44 327.44"><path d="M167.48,100.82c-58.57,63.89-56.58,105.37-35.63,124.83,9.36,8.69,22.49,13,35.64,13s26.28-4.34,35.64-13c20.94-19.45,22.93-60.94-35.65-124.83Zm0,142.48c-14.26,0-28.55-4.76-38.79-14.27-22.81-21.19-25.59-65.72,37.09-133.2h0a2.33,2.33,0,0,1,3.28-.12l.23.25c62.56,67.42,59.78,111.91,37,133.09C196,238.54,181.75,243.3,167.49,243.3Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:5px"/><path d="M134.82,181.55a2.48,2.48,0,1,1,4.81,1.22c0,.07-5.84,22.14,6.84,34a2.48,2.48,0,1,1-3.38,3.62C128.23,206.5,134.8,181.62,134.82,181.55Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:5px"/><circle cx="163.72" cy="163.72" r="159.22" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:9px"/></svg>
+          <p>Étanchéité</p>
         </div>
+        <div>
+          <svg id="icon-insul" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 327.44 327.44"><g id="icon-water"><circle cx="163.72" cy="163.72" r="159.22" style="fill:none;stroke:#4cf019;stroke-miterlimit:10;stroke-width:9px"/></g><g id="icon-insul"><path d="M176.37,165.24c1.07-1.18,1.58-1.76,2.11-2.33,13.52-14.39,13.42-35.89-.22-49.38-13.82-13.66-35.44-13.68-49.65.07q-27.21,26.34-54.25,52.85a36.78,36.78,0,0,0-7,9.23c-12.6,24.78,2.33,60.21,36.26,60.78,31.88.53,63.77.12,95.65,0a7,7,0,0,0,4.33-2q33-32.49,65.74-65.15c.67-.67,1.22-1.45,2.14-2.55Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-linejoin:round;stroke-width:8px"/><path d="M176.37,165.24l95.14,1.49c-.92,1.1-1.47,1.88-2.14,2.55q-32.84,32.61-65.74,65.15a7,7,0,0,1-4.33,2c-31.88.13-63.77.54-95.65,0-33.93-.57-48.86-36-36.26-60.78a36.78,36.78,0,0,1,7-9.23q27-26.56,54.25-52.85c14.21-13.75,35.83-13.73,49.65-.07,13.64,13.49,13.74,35,.22,49.38C178,163.48,177.44,164.06,176.37,165.24Z" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px"/><path d="M63,192.36c.72-19.76,16.32-34.73,35.75-34.44,19.19.28,34.15,15.71,34.37,35.45,0,.78,0,1.55.09,3.15" transform="translate(-3.51 -3.51)" style="fill:none;stroke:#4cf019;stroke-linecap:round;stroke-linejoin:round;stroke-width:8px"/></g></svg>
+          <p>Isolation</p>
+        </div>
+      </div>
     </div>
 
     </div>
   </section>
 
-
-
-
-  <section class="" id="galery"></section>
+  <section id="galery"></section>
   <section class="galeryGrid">
-
     <div class="imgContent">
-
       <div data-aos="fade-up" data-aos-duration="1000">
         <h2>Nos chantiers en 2021</h2>
         <br><br>
@@ -161,14 +138,12 @@
         <source srcset="./assets/img/img1.webp" type="image/webp">
         <source srcset="./assets/img/img1.jpg" type="image/jpg">
         <img class="round-effect effecthover" src="./assets/img/img1.jpg" alt="image1">
-      </picture>
-      <div class="textGalery">
-        <h4 >Premier chantier Luxembourg, Octobre 2020</h4>
-        <p>Isolation murs et combles</p>
+        </picture>
+        <div class="textGalery">
+          <h4 >Premier chantier Luxembourg, Octobre 2020</h4>
+          <p>Isolation murs et combles</p>
+        </div>
       </div>
-      </div>
-
-
       <div data-aos="fade-up" data-aos-duration="1500">
         <picture>
           <source srcset="./assets/img/img2.webp" type="image/webp">
@@ -176,12 +151,10 @@
           <img class="round-effect effecthover" src="./assets/img/img2.jpg" alt="image2">
         </picture>
         <div class="textGalery">
-          <h4 >Deuxièlme chantier à Thionville, Janvier 2021</h4>
+          <h4 >Deuxième chantier à Thionville, Janvier 2021</h4>
           <p>Étanchéité liquide en résine</p>
         </div>
-
       </div>
-
       <div data-aos="fade-up" data-aos-duration="2000">
         <picture>
           <source srcset="./assets/img/img3.webp" type="image/webp">
@@ -193,7 +166,7 @@
           <p>Étanchéité toits et terrasses</p>
         </div>
       </div>
-      </div>
+    </div>
   </section>
 
   <section class="third-banner">
@@ -203,7 +176,6 @@
     </script>
   </section>
   <section class="two-up"></section>
-
   <section id="section-footer">
     <div class="footer-container">
       <div class="contact-info">
